Update Graded Assignment 1.ipynb

--- a/Machine Learning/Graded Assignment 1.ipynb
+++ b/Machine Learning/Graded Assignment 1.ipynb
@@ -148,7 +148,7 @@
     "\n",
     "**(2) Choosing a learning rate Alpha**\n",
     "\n",
-    "Interestingly, the learning rate (alpha) had to be very small in order to not cause an overflow. The ideal learning rate had to be as large as possible, though.\n",
+    "Interestingly, the learning rate (alpha) had to be very small in order to not cause overfitting. The ideal learning rate had to be as large as possible, though, to prevent underfitting.\n",
     "\n",
     "Starting at 0.1, and then dividing by 10 every attempt, eventually lead to 0.001 no longer causing any problems. Then, increasingly small increments were added (from 0.001 to 0.0001 and 0.00001) to finally reach the learning rate of 0.00272. One could continue to do this for as many decimals as desired, but I believe this should be enough for this Assignment.\n",
     "\n",
