Update NOTEBOOK Neural Networks.ipynb

--- a/NOTEBOOK Neural Networks.ipynb
+++ b/NOTEBOOK Neural Networks.ipynb
@@ -10,11 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
     "%pylab inline"
    ]
@@ -29,11 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named 'sklearn.model_selection'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-23e3c3c889f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdatasets\u001b[0m \u001b[1;31m# to load the dataset\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpreprocessing\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mStandardScaler\u001b[0m \u001b[1;31m# to normalize data (NN is very sensitive to this!)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m \u001b[1;31m#to split in train and test set\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinear_model\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLogisticRegression\u001b[0m \u001b[1;31m#logistic regression classifier\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mneural_network\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mMLPClassifier\u001b[0m \u001b[1;31m# neural network classifier\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named 'sklearn.model_selection'"
+     ]
+    }
+   ],
    "source": [
     "#In this notebook we will work with the, commonly used, Iris dataset. \n",
     "#Please read the description of the dataset here:\n",
@@ -65,7 +85,8 @@
     "#Step 5: Load logistic regression.\n",
     "# Study in the documentation all the arguments that the function takes as input and returns as output.\n",
     "# Choose some initial values to start with and experiment with them after you get to Step 8.\n",
-    "\n",
+    "LR = LogisticRegression(C=1e5)\n",
+    "logreg.fit(x_train, y_train)\n",
     "\n",
     "#Step 6: Load NN Classifer\n",
     "# Study in the documentation all the arguments that the function takes as input and returns as output.\n",
@@ -73,7 +94,7 @@
     "\n",
     "\n",
     "# Step 7: Training\n",
-    "# Train both classifier, uising fit() function.\n",
+    "# Train both classifiers, uising fit() function.\n",
     "NN_class.fit(x_scaled, y)\n",
     "clf.fit(x_scaled, y)\n",
     "\n",
