--- a/NOTEBOOK Neural Networks.ipynb
+++ b/NOTEBOOK Neural Networks.ipynb
@@ -37,13 +37,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     }
+     "ename": "NameError",
+     "evalue": "name 'NN_class' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-3fc75c281b0a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[1;31m# Step 7: Training\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[1;31m# Train both classifiers, uising fit() function.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m \u001b[0mNN_class\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_scaled\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_scaled\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'NN_class' is not defined"
+     ]
+    }
    ],
    "source": [
     "#In this notebook we will work with the, commonly used, Iris dataset. \n",
@@ -66,8 +75,9 @@
     "x, y = iris.data, iris.target\n",
     "\n",
     "#Step 3: Normalize your data. Do it 'by hand' using a for-loop or use the StandardScaler() function.\n",
-    "StandardScaler().fit(x)\n",
-    "x_scaled = StandardScaler().transform(x)\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(x)\n",
+    "x_scaled = scaler.transform(x)\n",
     "\n",
     "#Step 4: Split the dataset in train and test sets. \n",
     "#You can either do it 'by hand' or use the train_test_split() function.\n",
@@ -77,7 +87,7 @@
     "# Study in the documentation all the arguments that the function takes as input and returns as output.\n",
     "# Choose some initial values to start with and experiment with them after you get to Step 8.\n",
     "LR = LogisticRegression(C=1e5)\n",
-    "logreg.fit(x_train, y_train)\n",
+    "LR.fit(x_train, y_train)\n",
     "\n",
     "#Step 6: Load NN Classifer\n",
     "# Study in the documentation all the arguments that the function takes as input and returns as output.\n",
